--- a/combined_rag_api/requirements.txt
+++ b/combined_rag_api/requirements.txt
@@ -1,11 +1,15 @@
 fastapi
 uvicorn
-langchain
-openai
-chromadb
-bs4
-tiktoken
+asyncpg
+uuid
 pydantic
-requests  # Needed for Ollama API calls
-psycopg2  # Needed for pgvector/PostgreSQL
-aiohttp  # Needed for async HTTP requests
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+pandas>=1.3.0
+openpyxl>=3.0.9
+beautifulsoup4>=4.10.0
+aiohttp>=3.8.1
+trafilatura>=1.4.0
+markdown>=3.3.6
+sentence-transformers>=2.2.2
+numpy>=1.21.0
